src/test/deca/context/valid/variable/empty_assign_float.deca
// Description:
//    Declare a float variable
//
// Results:
//
//
// History:
//    created on 06/01/2025

{
        float a;
}
